# ai-playground

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-push.yaml
config/: config.py
src/dt_prototype/: main.py
src/dt_prototype/ui/: sample_proto.py
src/dtprototype/: main.py
src/dtprototype/ui/: response_sample.md  sample_proto.py  test_integrate_sample_proto.py  test_validate_issue.py  validate_issue.py
src/dtprototype/ui/openaiclient/: query_openai.py  signature.py  test_query_openai.py
src/dtprototype/ui/prompts/: PromptMaker.py  SuggestionPromptMaker.py  ValidatingPromptMaker.py  json_to_markdown.py  sample_validation.md  suggestion-prompt.md  test_PromptMaker.py  tmp_inspiration.md  tmp_validation.md
src/n8nprototype/backend/integration_tests/: source_sink_test.py
src/n8nprototype/backend/metaprompting/: design.md  llm_client.py  meta_prompting_test.py  mqtt_workflow_prompt_process_test.py  test_MQTTAutonomousAgent.py  test_TestAutonomousAgentFork.py  test_agentfork_debug.py  test_agentfork_with_payload.py  test_autonomous_agent.py  test_n8n_auth.py  test_ollama.py  test_ollamacall_webhook.py  text_similarity.py
src/n8nprototype/backend/src/: extract_from_and_set_workflow.py  extract_json_from_response.py  file_io.py  get_set_n8n_workflow.py
src/n8nprototype/frontend/: Dockerfile  package-lock.json  package.json
src/n8nprototype/workflows/: source_sink.json  workflow-selection-prompt.md
tests/backend/utils/: test_source_sink.py
(+98 files in other folders)
