[project]
name = "ai-playground"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.9.0",
    "openai>=1.58.1",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests-mock>=1.12.1",
]
